erDiagram
    PERSONS ||--o| STUDENTS: "is a"
    PERSONS ||--o| EMPLOYEES: "is a"
    PERSONS ||--o{ PERSON_ROLES: "has roles"
    COURSES ||--o{ COURSE_CLASS: "offered as"
    EMPLOYEES ||--o{ COURSE_CLASS: "teaches (as instructor)"
    EMPLOYEES ||--o{ COURSE_TEACHING_ASSISTANTS: "assists (as TA)"
    COURSE_CLASS ||--o{ COURSE_TEACHING_ASSISTANTS: "has TAs"
    STUDENTS ||--o{ ENROLLMENTS: "enrolls in"
    COURSE_CLASS ||--o{ ENROLLMENTS: "has students"

    PERSONS {
        string id PK
        string first_name
        string last_name
        string email UK
        string password
        string phone
        date date_of_birth
        string address
    }

    PERSON_ROLES {
        string id PK
        string person_id FK
        string role "ADMIN, STUDENT, INSTRUCTOR, ..."
    }

    STUDENTS {
        string id PK
        string person_id FK, UK
        string student_number UK
        string major
        int academic_year
        decimal gpa
        string status "ACTIVE, GRADUATED, SUSPENDED, ..."
    }

    EMPLOYEES {
        string id PK
        string person_id FK
        string employee_number UK
        date hire_date
        int salary
        string position "LECTURER, TA, ADMIN" 
        string status "ACTIVE, ON_LEAVE, TERMINATED, ..."
    }

    COURSES {
        string id PK
        string course_code UK
        string title
        text description
        int credits
    }

    COURSE_CLASS {
        string id PK
        string course_id FK
        string lecturer_id FK "References EMPLOYEES.id"
        string semester
        int year
        int current_capacity
        int max_capacity
        string status "ACTIVE, COMPLETED, CANCELLED"
    }

    COURSE_TEACHING_ASSISTANTS {
        string id PK
        string class_id FK
        string employee_id FK "References EMPLOYEES.id (Must be a TA)"
    }

    ENROLLMENTS {
        string id PK
        string student_id FK
        string class_id FK
        string grade
        string status "ENROLLED, COMPLETED, DROPPED, ..."
    }